exercise_apps/manifests/postgres.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: postgres-stset
    namespace: exercises-namespace
spec:
    serviceName: "postgres-svc"
    selector:
        matchLabels:
            app: postgresapp
    template:
        metadata:
            labels:
                app: postgresapp
        spec:
            containers:
                - name: postgres
                  image: postgres
                  volumeMounts:
                      - name: postgres-data-storage
                        mountPath: /var/lib/postgresql/data
                        subPath: postgres
    volumeClaimTemplates:
        - metadata:
              name: postgres-data-storage
          spec:
              accessModes: ["ReadWriteOnce"]
              resources:
                  requests:
                      storage: 100Mi
---
apiVersion: v1
kind: Service
metadata:
    name: postgres-svc
    namespace: exercises-namespace
    labels:
        app: postgres
spec:
    ports:
        - port: 5432
          name: web
    clusterIP: None
    selector:
        app: postgresapp
