exercise_apps/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: log-output-ingress
    namespace: exercises-namespace
spec:
    rules:
        - http:
              paths:
                  - path: /
                    pathType: Exact
                    backend:
                        service:
                            name: log-output-svc
                            port:
                                number: 80
                  - path: /pingpong
                    pathType: Prefix
                    backend:
                        service:
                            name: pong-svc
                            port:
                                number: 80
